# opensse

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  Dockerfile  LICENSE  README.md  index.html  opensse.h  opensse.pri  opensse.pro  opensse.pro.user.75b79b1  params.json
common/: distance.h  types.h
data/: vocabulary
data/view/: 0.xf  100.xf  11.xf  12.xf  14.xf  15.xf  16.xf  17.xf  18.xf  20.xf  22.xf  24.xf  26.xf  27.xf  3.xf  30.xf  31.xf  33.xf  38.xf  39.xf  41.xf  43.xf  44.xf  45.xf  47.xf  48.xf  49.xf  51.xf  53.xf  55.xf  56.xf  57.xf  61.xf  66.xf  68.xf  69.xf  7.xf  70.xf  73.xf  74.xf  (+14 more)
features/: detector.cpp  detector.h  feature.h  galif.cpp  galif.h  generator.cpp  generator.h  util.cpp  util.h
gui/SketchSearchDemo/: SketchSearchDemo.pro  config.json  main.cpp  mainwindow.cpp  mainwindow.h  resultphotowidget.cpp  resultphotowidget.h  searchengine.h  sketcharea.cpp  sketcharea.h  sketchsearcher.cpp  sketchsearcher.h
gui/SketchSearchDemo/trimeshview/: trimeshview.cpp  trimeshview.h  trimeshview.pri  trimeshview_draw_apparent_ridges.cpp  trimeshview_draw_base.cpp  trimeshview_draw_lines.cpp  trimeshview_draw_ridges_and_valleys.cpp
gui/SketchSearchDemo/trimeshview/include/: Color.h  GLCamera.h  KDtree.h  Vec.h  XForm.h  bsphere.h  lineqn.h  mempool.h  strutil.h  timestamp.h  trianglemesh.h
gui/SketchSearchDemo/trimeshview/trianglemesh/: GLCamera.cpp  KDtree.cpp  trianglemesh_bounding.cpp  trianglemesh_connectivity.cpp  trianglemesh_curvature.cpp  trianglemesh_io.cpp  trianglemesh_normals.cpp  trianglemesh_pointareas.cpp  trianglemesh_stats.cpp  trianglemesh_tstrips.cpp
gui/SketchSearchDemo/view/: 1.xf  10.xf  101.xf  13.xf  19.xf  2.xf  21.xf  23.xf  25.xf  28.xf  29.xf  32.xf  34.xf  35.xf  36.xf  37.xf  4.xf  40.xf  42.xf  46.xf  5.xf  50.xf  52.xf  54.xf  58.xf  59.xf  6.xf  60.xf  62.xf  63.xf  64.xf  65.xf  67.xf  71.xf  72.xf  75.xf  78.xf  8.xf  82.xf  83.xf  (+8 more)
index/: invertedindex.cpp  invertedindex.h  tfidf.cpp  tfidf.h
io/: filelist.cpp  filelist.h  reader_writer.cpp  reader_writer.h
quantize/: quantizer.cpp  quantizer.h
recognize/: sketchrecognizer.cpp  sketchrecognizer.h
sse/: CMakeLists.txt  opensse.h
sse/common/: boost_related.h  distance.h  types.h
sse/features/: detector.cpp  feature.h  galif.cpp  galif.h  util.cpp
sse/index/: invertedindex.cpp  tfidf.cpp  tfidf.h
sse/io/: filelist.cpp  filelist.h  json_parser.cpp  json_parser.h  reader_writer.cpp  reader_writer.h
sse/quantize/: quantizer.cpp  quantizer.h
sse/vocabulary/: kmeans.h  kmeans_init.h
stylesheets/: stylesheet.css
tests/: CMakeLists.txt
tests/stat_vocab/: main.cpp
tests/test_galif/: main.cpp
tests/test_reader_and_writer/: main.cpp  test_reader_and_writer.pro
tests/test_search/: main.cpp  searchengine.h  sketchsearcher.cpp  sketchsearcher.h  test_search.pro
tests/test_similarity/: main.cpp
tools/: CMakeLists.txt  add_license.sh  extract.cpp  extract_and_quantize.cpp  filelist  generate_filelist.py  generate_filelist.rb  index.cpp  quantize.cpp  search.cpp  sse  vocabulary.cpp
tools/create_index/: create_index.pro  main.cpp
tools/extract_and_quantize/: extract_and_quantize.pro  main.cpp
tools/extract_descriptors/: extract_descriptors.pro  main.cpp
tools/generate_filelist/: generate_filelist  main.cpp
tools/generate_vocabulary/: generate_vocabulary.pro  main.cpp
tools/quantize/: main.cpp  quantize.pro
tools/sketch_search/: main.cpp
vocabulary/: kmeans.h  kmeans_init.h
